[gd_scene load_steps=5 format=2]

[ext_resource path="res://level_create_Menu/font.tres" type="DynamicFont" id=1]
[ext_resource path="res://level_create_Menu/level_create.gd" type="Script" id=2]

[sub_resource type="Theme" id=2]
LineEdit/fonts/font = ExtResource( 1 )

[sub_resource type="Theme" id=3]
Button/fonts/font = ExtResource( 1 )

[node name="level_create" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="w" type="SpinBox" parent="."]
margin_left = 264.0
margin_top = 20.0
margin_right = 494.0
margin_bottom = 137.0
rect_pivot_offset = Vector2( 433, 117 )
theme = SubResource( 2 )
min_value = 10.0
max_value = 64.0
step = 2.0
value = 10.0

[node name="d" type="SpinBox" parent="."]
margin_left = 722.0
margin_top = 19.0
margin_right = 952.0
margin_bottom = 136.0
rect_pivot_offset = Vector2( 433, 117 )
theme = SubResource( 2 )
min_value = 10.0
max_value = 64.0
step = 2.0
value = 10.0

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 574.0
margin_top = 35.0
margin_right = 657.0
margin_bottom = 143.0
custom_fonts/normal_font = ExtResource( 1 )
text = "X"

[node name="create" type="Button" parent="."]
margin_left = 612.0
margin_top = 404.0
margin_right = 937.0
margin_bottom = 528.0
theme = SubResource( 3 )
text = "Create"

[node name="inventory test" type="Button" parent="."]
margin_left = 11.0
margin_top = 403.0
margin_right = 437.0
margin_bottom = 527.0
theme = SubResource( 3 )
text = "Inventory Test"

[connection signal="value_changed" from="w" to="." method="_on_w_value_changed"]
[connection signal="value_changed" from="d" to="." method="_on_d_value_changed"]
[connection signal="pressed" from="create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="inventory test" to="." method="_on_inventory_test_pressed"]
